Updates dependencies 1.3.2-TL4K003

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -8,7 +8,7 @@
 <html>
 
 <head>
-<title>ScratchJr</title>
+<!--<title>ScratchJr</title>-->
 <script>
     window.scratchJrPage = 'index';
 </script>
