mmany little fixes

--- a/src/app/home.html
+++ b/src/app/home.html
@@ -11,7 +11,7 @@
 <script>
     window.scratchJrPage = 'home';
 </script>
-<script src='../electronClient.js'></script>
+<script src='electronClient.js'></script>
 <script type="text/javascript" src="appEntry.js"></script>
 
 </head>
