--- a/src/app/index.html
+++ b/src/app/index.html
@@ -12,8 +12,8 @@
 <script>
     window.scratchJrPage = 'index';
 </script>
-<script src='../electronClient.js'></script>
-<script type="text/javascript" src="appEntry.js"></script>
+<script src='./electronClient.js'></script>
+<script type="text/javascript" src="./appEntry.js"></script>
 </head>
 <body style="margin:0px; background: black;">
     <div class="frame" id="frame">
