--- a/src/app/editor.html
+++ b/src/app/editor.html
@@ -11,7 +11,7 @@
 <script>
     window.scratchJrPage = 'editor';
 </script>
-<script src='../electronClient.js'></script>
+<script src='electronClient.js'></script>
 <script type="text/javascript" src="appEntry.js"></script>
 </head>
 <body style="background: white;">
