--- a/src/app/gettingstarted.html
+++ b/src/app/gettingstarted.html
@@ -11,7 +11,7 @@
 <script language="javascript">
     window.scratchJrPage = 'gettingStarted';
 </script>
-<script src='../electronClient.js'></script>
+<script src='electronClient.js'></script>
 <script type="text/javascript" src="appEntry.js"></script>
 
 </head>
